# MyCompilerInterpreter

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
src/MyCompilerInterpreter/: cli.py  compiler.py  interpreter.py  main.py  parser.py  tokenizer.py
tests/: test_cli.py  test_compiler.py  test_interpreter.py  test_main.py  test_parser.py  test_tokenizer.py
