# Specifications for this file are in https://packaging.python.org/specifications/core-metadata
[project]
name = "MyCompilerInterpreter"
readme = "README.md"
dynamic = ["version"]
keywords = [
  "development",
]

authors = [
  { name = "Simone Rubino", email = "daemo00@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "mypy",
  "black",
  "pytest",
]

[project.optional-dependencies]
docs = [
	"sphinx",
	"sphinx-immaterial",
]


[project.scripts]
execute = "MyCompilerInterpreter:cli.main"


[tool.setuptools_scm]
write_to = "src/MyCompilerInterpreter/__version__.py"

[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"
